--- a/css/cumbres2000.css
+++ b/css/cumbres2000.css
@@ -1,187 +1,10 @@
-html{height:100%}
-body{background-image:url('../img/fondo.jpg'); background-repeat:no-repeat; background-position:center bottom; background-color:#000000; background-attachment:fixed;padding:0;margin:0;height:100%}
-
-img {border:0;}
-
-.rutas1{PADDING-LEFT: 0px; FONT-SIZE: 12px; FONT-FAMILY: verdana; TEXT-ALIGN: left; LINE-HEIGHT: 18px; PADDING-BOTTOM: 5px; PADDING-TOP: 5px; BORDER-BOTTOM: #ccc 1px solid; COLOR: #000;}
-.rutas1 a{COLOR: #000; FONT-SIZE: 12px;}
-.rutas1 a:link, a:active, a:visited {TEXT-DECORATION: none;}
-.rutas1 a:hover {TEXT-DECORATION: underline;}
-
-.rutas3{PADDING-LEFT: 0px; FONT-SIZE: 12px; FONT-FAMILY: verdana; TEXT-ALIGN: left; LINE-HEIGHT: 18px; PADDING-BOTTOM: 0px; PADDING-TOP: 5px; BORDER-BOTTOM: #ccc 0px solid; COLOR: #000;}
-.rutas3 a{COLOR: #000; FONT-SIZE: 12px;}
-.rutas3 a:link, a:active, a:visited {TEXT-DECORATION: none;}
-.rutas3 a:hover {TEXT-DECORATION: underline;}
-
-.hijos{PADDING-LEFT: 2px; FONT-SIZE: 12px; FONT-FAMILY: Verdana; TEXT-ALIGN: left; LINE-HEIGHT:22px; PADDING-BOTTOM:0px; PADDING-TOP:0px; PADDING-left:20px;}
-.hijos a{COLOR: #000}
-.hijos a:link, a:active, a:visited {TEXT-DECORATION: none;}
-.hijos a:hover {TEXT-DECORATION: underline}
-.hijos img{BORDER-RIGHT: #ccc 1px solid; BORDER-TOP: #ccc 1px solid; BORDER-LEFT: #ccc 1px solid; BORDER-BOTTOM: #ccc 1px solid; text-align: center;}
-
-.sub2{PADDING-LEFT: 2px; FONT-SIZE: 13px; FONT-FAMILY: Tahoma; TEXT-ALIGN: left; LINE-HEIGHT:10px; PADDING-BOTTOM: 10px; PADDING-TOP:0px; font-weight: bold;}
-
-.sub3{PADDING-LEFT: 12px; FONT-SIZE: 13px; FONT-FAMILY: Tahoma; TEXT-ALIGN: left; LINE-HEIGHT:10px; PADDING-BOTTOM: 10px; PADDING-TOP: 10px; font-weight: bold;}
-
-.barra1 {BACKGROUND-COLOR: #fff;BORDER-RIGHT: #494949 1px solid; BORDER-TOP: #b1b1b1 1px solid; BORDER-LEFT: #b1b1b1 0px solid; PADDING-LEFT: 6px; FONT-SIZE: 10px; FONT-FAMILY: tahoma; PADDING-top: 1px; PADDING-BOTTOM: 3px; font-weight: bold;}
-
-.barra2 {BACKGROUND-COLOR: #fff;BORDER-RIGHT: #494949 1px solid; BORDER-TOP: #b1b1b1 1px solid; BORDER-LEFT: #b1b1b1 1px solid;PADDING-RIGHT: 10px; PADDING-LEFT: 6px; PADDING-BOTTOM: 1px; PADDING-TOP: 1px; FONT-SIZE: 10px; FONT-FAMILY: tahoma; text-align:center;}
-
-.contenido{border:1px solid #CED3FF; COLOR: #000; background-image:url('../img/trans_back_white.png');PADDING-RIGHT: 15px; PADDING-LEFT: 10px; PADDING-BOTTOM: 20px; PADDING-TOP: 10px; FONT-SIZE: 12px; FONT-FAMILY: Verdana; TEXT-ALIGN: justify; LINE-HEIGHT: 18px}
-.contenido a{COLOR: #000}
-.contenido a:link, a:active, a:visited {TEXT-DECORATION: none;}
-.contenido a:hover {TEXT-DECORATION: underline}
-.contenido img{BORDER-RIGHT: #ccc 1px solid; BORDER-TOP: #ccc 1px solid; BORDER-LEFT: #ccc 1px solid; BORDER-BOTTOM: #ccc 1px solid; text-align: center;}
-
-.menu_izq{BORDER-RIGHT: #CED3FF 0px solid; BORDER-TOP: #CED3FF 0px solid; BORDER-LEFT: #CED3FF 0px solid; BORDER-BOTTOM: #CED3FF 0px solid;PADDING-RIGHT: 6px; PADDING-LEFT: 4px; PADDING-BOTTOM: 2px; PADDING-TOP: 2px; FONT-SIZE: 11px; FONT-STYLE: normal; FONT-FAMILY: tahoma; line-height:17px; }
-
-.menu_izq1{ background-image:url('../img/trans_back_black.png'); BORDER-TOP: 1px solid #666; PADDING-RIGHT: 2px; PADDING-LEFT: 21px; PADDING-BOTTOM: 7px; PADDING-TOP: 7px;FONT-SIZE: 12px; FONT-STYLE: normal; line-height:18px; COLOR: #fff; font-weight: bold}
-
-.menu_izq2 { background-image:url('../img/trans_back_black.png'); BORDER-TOP: 1px solid #666; PADDING-RIGHT: 2px; PADDING-LEFT: 2px; PADDING-BOTTOM: 7px; PADDING-TOP: 7px; FONT-SIZE: 12px; FONT-STYLE: normal; line-height:18px; COLOR: #fff;}
-			
-.menu_izq2 a{COLOR: #fff}
-.menu_izq2 a:link, a:active, a:visited {TEXT-DECORATION: none;}
-.menu_izq2 a:hover {TEXT-DECORATION: underline;}
-
-.menu_izq3{ background-image:url('../img/trans_back_white.png'); BORDER-TOP: 1px solid #666; PADDING-RIGHT: 2px; PADDING-LEFT: 2px; PADDING-BOTTOM: 3px; PADDING-TOP: 3px;FONT-SIZE: 9px; FONT-STYLE: normal; line-height:15px; COLOR: #fff}
-
-.menu_izq4{ background-image:url('../img/trans_back_white.png'); BORDER-TOP: 1px solid #666; PADDING-RIGHT: 0px; PADDING-LEFT: 0px; PADDING-BOTTOM: 0px; PADDING-TOP: 2px;}
-
-.InicioGaleria{PADDING-RIGHT: 0px; PADDING-LEFT: 0px; PADDING-BOTTOM: 10px; PADDING-TOP: 0px; FONT-SIZE: 11px; FONT-STYLE: normal; FONT-FAMILY: tahoma; text-align:center}
-.InicioGaleria a{COLOR: #000}
-.InicioGaleria a:link, a:active, a:visited {TEXT-DECORATION: none;}
-.InicioGaleria a:hover {TEXT-DECORATION: underline;}
-
-.galeriaFotosTop{ BORDER-TOP: #666 0px solid; PADDING-RIGHT: 2px; PADDING-LEFT: 2px; PADDING-BOTTOM: 5px; PADDING-TOP: 5px;FONT-SIZE: 12px; FONT-STYLE: normal; line-height:18px; COLOR: #00; font-family:Verdana;}
-.galeriaFotosTop a{COLOR: #000}
-.galeriaFotosTop a:link, a:active, a:visited {TEXT-DECORATION: none;}
-.galeriaFotosTop a:hover {TEXT-DECORATION: underline;}
-
-.galeriaFotosTop2{ BORDER-TOP: #666 0px solid; PADDING-RIGHT: 2px; PADDING-LEFT: 2px; PADDING-BOTTOM: 2px; PADDING-TOP: 2px;FONT-SIZE: 12px; FONT-STYLE: normal; line-height:13px; COLOR: #00; font-family:Verdana;}
-.galeriaFotosTop2 a{COLOR: #000}
-.galeriaFotosTop2 a:link, a:active, a:visited {TEXT-DECORATION: none;}
-.galeriaFotosTop2 a:hover {TEXT-DECORATION: underline;}
-
-.inicio{PADDING-RIGHT: 0px; PADDING-LEFT: 0px; PADDING-BOTTOM: 0px; PADDING-TOP: 0px; FONT-SIZE: 11px; FONT-STYLE: normal; FONT-FAMILY: tahoma; line-height:16px; text-align:left;}
-
-.publicidad{BACKGROUND-COLOR: #fff;BORDER-RIGHT: #2b2b2b 1px solid; BORDER-TOP: #2b2b2b 1px solid; BORDER-LEFT: #556371 1px solid; BORDER-BOTTOM: #2b2b2b 1px solid;PADDING-RIGHT: 2px; PADDING-LEFT: 2px; PADDING-BOTTOM: 17px; PADDING-TOP: 12px;}
-
-.galeria img{BORDER-RIGHT: #ccc 1px solid; BORDER-TOP: #ccc 1px solid; BORDER-LEFT: #ccc 1px solid; BORDER-BOTTOM: #ccc 1px solid;}
-
-.fotos{PADDING-RIGHT: 0px; PADDING-LEFT: 0px; PADDING-BOTTOM: 20px; PADDING-TOP: 5px; FONT-SIZE: 11px; FONT-STYLE: normal; FONT-FAMILY: tahoma; line-height:15px; text-align:center}
-
-.principal_articulos{PADDING-RIGHT: 0px; PADDING-LEFT: 0px; PADDING-BOTTOM: 1px; PADDING-TOP: 1px; FONT-SIZE: 11px; FONT-STYLE: normal; FONT-FAMILY: tahoma; line-height:15px; text-align:center;}
-
-.webcam{PADDING-RIGHT: 10px; PADDING-LEFT: 10px; PADDING-BOTTOM: 7px; PADDING-TOP: 6px; FONT-SIZE: 11px; FONT-STYLE: normal; FONT-FAMILY: tahoma; line-height:15px; text-align:center;}
-
-.fotos_contenido{PADDING-RIGHT: 0px; PADDING-LEFT: 0px; PADDING-BOTTOM: 0px; PADDING-TOP: 2px; FONT-SIZE: 10px; FONT-STYLE: normal; FONT-FAMILY: tahoma; text-align:center;}
-
-.fotos_contenido_lat{PADDING-RIGHT: 2px; PADDING-LEFT: 2px; PADDING-BOTTOM: 12px; PADDING-TOP: 0px; FONT-SIZE: 10px; FONT-STYLE: normal; FONT-FAMILY: Verdana; text-align:center;}
-.fotos_contenido_lat a{COLOR: #666}
-.fotos_contenido_lat a:link, a:active, a:visited {TEXT-DECORATION: none;}
-.fotos_contenido_lat a:hover {TEXT-DECORATION: underline;}
-
-.fotos_contenido_port{PADDING-RIGHT: 0px; PADDING-LEFT: 10px; PADDING-BOTTOM: 5px; PADDING-TOP: 2px; FONT-SIZE: 11px; FONT-STYLE: normal; FONT-FAMILY: Verdana; text-align:left;}
-.fotos_contenido_port a{COLOR: #666}
-.fotos_contenido_port a:link, a:active, a:visited {TEXT-DECORATION: none;}
-.fotos_contenido_port a:hover {TEXT-DECORATION: underline;}
-
-.tepuyes{PADDING-RIGHT: 0px; PADDING-LEFT: 0px; PADDING-BOTTOM: 20px; PADDING-TOP: 4px; FONT-SIZE: 12px; FONT-STYLE: normal; FONT-FAMILY: tahoma; text-align:center;  font-weight: bold}
-
-.fotos_contenido2{PADDING-RIGHT: 0px; PADDING-LEFT: 0px; PADDING-BOTTOM: 0px; PADDING-TOP: 2px; FONT-SIZE: 11px; FONT-STYLE: normal; FONT-FAMILY: tahoma; text-align:center;}
-
-.aleatorio{PADDING-RIGHT: 0px; PADDING-LEFT: 0px; PADDING-BOTTOM: 0px; PADDING-TOP: 2px; FONT-SIZE: 11px; FONT-STYLE: normal; FONT-FAMILY: tahoma; text-align:center;}
-
-.articulos{PADDING-LEFT: 5px; TEXT-ALIGN: left; LINE-HEIGHT: 16px; PADDING-BOTTOM: 5px; PADDING-TOP: 5px;  font-weight: bold;}
-.articulos a{COLOR: #000; font-weight:normal;}
-.articulos a:link, a:active, a:visited {TEXT-DECORATION: none;}
-.articulos a:hover {TEXT-DECORATION: underline;}
-
-.descargas{PADDING-LEFT: 0px; TEXT-ALIGN: left; LINE-HEIGHT: 16px; PADDING-BOTTOM: 5px; PADDING-TOP: 25px; font-weight: bold;}
-
-.descargas2{PADDING-LEFT: 0px; TEXT-ALIGN: left; LINE-HEIGHT: 14px; PADDING-BOTTOM: 4px; PADDING-TOP: 4px;}
-.descargas2 a{COLOR: #000; font-weight:normal;}
-.descargas2 a:link, a:active, a:visited {TEXT-DECORATION: none;}
-.descargas2 a:hover {TEXT-DECORATION: underline;}
-
-.seguir{COLOR: #ccc; BORDER-RIGHT: #CED3FF 0px solid; BORDER-TOP: #CED3FF 0px solid; BORDER-LEFT: #CED3FF 0px solid; BORDER-BOTTOM: #CED3FF 0px solid;PADDING-RIGHT: 0px; PADDING-LEFT: 0px; PADDING-BOTTOM: 7px; PADDING-TOP: 0px; FONT-SIZE: 9px; FONT-STYLE: normal; FONT-FAMILY: tahoma; text-align:left; font-weight: bold;}
-
-.frase{COLOR: #ccc; BORDER-RIGHT: #CED3FF 0px solid; BORDER-TOP: #CED3FF 0px solid; BORDER-LEFT: #CED3FF 0px solid; BORDER-BOTTOM: #CED3FF 0px solid;PADDING-RIGHT: 6px; PADDING-LEFT: 0px; PADDING-BOTTOM: 2px; PADDING-TOP: 2px; FONT-SIZE: 9px; FONT-STYLE: normal; FONT-FAMILY: tahoma; line-height:13px; text-align:left;}
-
-.pie{background-image:url('../img/trans_back_black.png'); PADDING-RIGHT: 6px; PADDING-LEFT: 8px; PADDING-BOTTOM: 8px; PADDING-TOP: 6px; FONT-SIZE: 11px; FONT-STYLE: normal; FONT-FAMILY: tahoma; LINE-HEIGHT: 14px; COLOR: #ccc}
-
-.tit{PADDING-LEFT: 0px; FONT-SIZE: 11px; FONT-FAMILY: Tahoma; TEXT-ALIGN: center; LINE-HEIGHT: 16px; PADDING-BOTTOM: 4px; PADDING-TOP: 4px; }
-
-.tit2{PADDING-LEFT: 0px; FONT-SIZE: 12px; FONT-FAMILY: Tahoma; TEXT-ALIGN: center; LINE-HEIGHT: 16px; PADDING-BOTTOM: 20px; PADDING-TOP: 4px;  font-weight: bold;}
-
-.tit_hijos{PADDING-LEFT: 0px; FONT-SIZE: 13px; FONT-FAMILY: Verdana; TEXT-ALIGN: left; LINE-HEIGHT: 15px; PADDING-BOTTOM: 4px; PADDING-TOP: 10px; font-weight: bold;}
-
-.sub{PADDING-LEFT: 0px; FONT-SIZE: 13px; FONT-FAMILY: Verdana; TEXT-ALIGN: left; LINE-HEIGHT: 20px; PADDING-BOTTOM: 4px; PADDING-TOP: 10px; font-weight: bold;}
-.sub img{ border:0;}
-
-.subNoticias{PADDING-LEFT: 0px; FONT-SIZE: 13px; FONT-FAMILY: Tahoma; TEXT-ALIGN: left; LINE-HEIGHT: 15px; PADDING-BOTTOM: 4px; PADDING-TOP: 0px; font-weight: bold;}
-.subNoticias2{PADDING-LEFT: 0px; FONT-SIZE: 13px; FONT-FAMILY: Tahoma; TEXT-ALIGN: left; LINE-HEIGHT: 15px; PADDING-BOTTOM: 0px; PADDING-TOP: 8px; font-weight: bold;}
-
-.rutas2{COLOR: #666;}
-
-.fotos{PADDING-RIGHT: 0px; PADDING-LEFT: 0px; PADDING-BOTTOM: 10px; PADDING-TOP: 0px; FONT-SIZE: 11px; FONT-STYLE: normal; FONT-FAMILY: tahoma; text-align:center;}
-.fotos a{COLOR: #000}
-.fotos a:link, a:active, a:visited {TEXT-DECORATION: none;}
-.fotos a:hover {TEXT-DECORATION: underline;}
-
-.fotos_mapas{PADDING-RIGHT: 0px; PADDING-LEFT: 0px; PADDING-BOTTOM: 30px; PADDING-TOP: 0px; FONT-SIZE: 12px; FONT-STYLE: normal; FONT-FAMILY: verdana; text-align:center;}
-.fotos a{COLOR: #000}
-.fotos a:link, a:active, a:visited {TEXT-DECORATION: none;}
-.fotos a:hover {TEXT-DECORATION: underline;}
-
-.tabla_mundo{PADDING-LEFT: 0px; FONT-SIZE: 11px; FONT-FAMILY: Tahoma; TEXT-ALIGN: left; LINE-HEIGHT: 15px; PADDING-BOTTOM: 3px; PADDING-TOP: 3px; PADDING-LEFT: 0px; PADDING-RIGHT: 20px;}
-.tabla_mundo a{COLOR: #0000FF}
-.tabla_mundo a:link, a:active, a:visited {TEXT-DECORATION: none;}
-.tabla_mundo a:hover {TEXT-DECORATION: underline;}
-
-.tabla_mundo2{PADDING-LEFT: 0px; FONT-SIZE: 11px; FONT-FAMILY: Tahoma; TEXT-ALIGN: center; LINE-HEIGHT: 15px; PADDING-BOTTOM: 3px; PADDING-TOP: 3px; font-weight: bold; PADDING-RIGHT: 20px;}
-
-.tabla_mundo3{PADDING-LEFT: 0px; FONT-SIZE: 11px; FONT-FAMILY: Tahoma; TEXT-ALIGN: center; LINE-HEIGHT: 15px; PADDING-BOTTOM: 3px; PADDING-TOP: 3px; PADDING-RIGHT: 20px;}
-
-.comentario{
-	border:1px solid #CCCCCC;
-	color:#333;
-    border-radius:5px;
-	-moz-border-radius:5px;
-	-webkit-border-radius:5px;
-	padding:5px;
-	margin-top:5px;
+body{
+	background-image:url('../img/fondo.jpg'); 
+	background-repeat:no-repeat; 
+	background-position:center bottom; 
+	background-color:#000000; 
+	background-attachment:fixed;
+	padding:0;
+	margin:0;
+	height:100%;
 }
-.comentario span{
-	float:right;
-	margin-top:-40px;
-	font-size:9px
-}
-
-
-.inicio00{PADDING-LEFT: 0px; FONT-SIZE: 9px; FONT-FAMILY: Tahoma; TEXT-ALIGN: left; LINE-HEIGHT: 10px; PADDING-BOTTOM: 2px; PADDING-TOP: 0px; color:#666666}
-.inicio00 img{BORDER-RIGHT: #ccc 1px solid; BORDER-TOP: #ccc 1px solid; BORDER-LEFT: #ccc 1px solid; BORDER-BOTTOM: #ccc 1px solid; text-align: center;}
-
-.inicio01{PADDING-LEFT: 0px; FONT-SIZE: 9px; FONT-FAMILY: Tahoma; TEXT-ALIGN: left; LINE-HEIGHT: 10px; PADDING-BOTTOM: 2px; PADDING-TOP: 0px;}
-.inicio01 a{COLOR: #666;}
-.inicio01 a:link, a:active, a:visited {TEXT-DECORATION: none;}
-.inicio01 a:hover {TEXT-DECORATION: underline;}
-
-.inicio02{PADDING-LEFT: 0px; FONT-SIZE: 16px; FONT-FAMILY: Arial; TEXT-ALIGN: left; LINE-HEIGHT: 20px; PADDING-BOTTOM: 2px; PADDING-TOP: 0px; font-weight: bold;}
-.inicio02 a{COLOR: #000;}
-.inicio02 a:link, a:active, a:visited {TEXT-DECORATION: none;}
-.inicio02 a:hover {COLOR: #333;}
-
-.inicio05{PADDING-LEFT: 0px; FONT-SIZE: 11px; FONT-FAMILY: tahoma; TEXT-ALIGN: left; LINE-HEIGHT: 15px; PADDING-BOTTOM: 2px; PADDING-TOP: 0px;}
-.inicio06{PADDING-LEFT: 0px; FONT-SIZE: 11px; FONT-FAMILY: tahoma; TEXT-ALIGN: center; LINE-HEIGHT: 16px; PADDING-BOTTOM: 5px; PADDING-TOP: 5px; font-weight: bold}
-.inicio07{PADDING-LEFT: 0px; FONT-SIZE: 11px; FONT-FAMILY: tahoma; TEXT-ALIGN: right; LINE-HEIGHT: 16px; PADDING-BOTTOM: 6px; PADDING-TOP: 5px}
-
-.inicio08{PADDING-LEFT: 0px; FONT-SIZE: 11px; FONT-FAMILY: tahoma; TEXT-ALIGN: left; LINE-HEIGHT: 15px; PADDING-BOTTOM: 8px; PADDING-TOP: 8px; BORDER-BOTTOM: #ccc 1px solid;}
-.inicio08 a{COLOR: #000; FONT-SIZE: 11px;}
-.inicio08 a:link, a:active, a:visited {TEXT-DECORATION: none;}
-.inicio08 a:hover {TEXT-DECORATION: underline;}
-
-.inicio09{PADDING-LEFT: 0px; FONT-SIZE: 11px; FONT-FAMILY: tahoma; TEXT-ALIGN: left; LINE-HEIGHT: 15px; PADDING-BOTTOM: 8px; PADDING-TOP: 8px}
-.inicio09 a{COLOR: #000;}
-.inicio09 a:link, a:active, a:visited {TEXT-DECORATION: none;}
-.inicio09 a:hover {TEXT-DECORATION: underline;}
